2006-07-27:
	* src/auth.c: include unistd.h to get the declaration of getuid().

2006-07-26:
	* src/options.c(option_i): check for strtoll()/long long.
	* configure.ac: check for strtoll().
	* src/v4.c(v4_save): actually set the permissions on the new file to
	the requested values.  Note in the warning why we fail to open a
	file, which is returned as the result and not in errno.
	* src/storetmp.c(_pam_krb5_storetmp_data): try to setreu/gid if either
	the real or effective values don't match the desired value.
	* src/pam_krb5_storetmp.c(main): only use strtoll() if it's
	available, otherwise just use strtol().
	* src/stash.c(_pam_krb5_stash_clone): go back to overwriting the
	template, to avoid uncontrolled growth in the filename.
	* src/session.c(pam_sm_open_session): specify the current real
	UID and GID when creating temporary v4 credential files.  Note the
	guessed UID and GID of the user in the debug message.
	* src/auth.c(pam_sm_authenticate): always specify the current real
	UID and GID when creating temporary v4 credential files.
	* src/stash.c(_pam_krb5_stash_clone): build the new ccache name by
	appending the mkstemp template instead of assuming the previous file
	ended with one
	* configure.ac: check for "long long" explicitly
	* src/storetmp.c(_pam_krb5_storetmp_data): use a long long print
	specifier only if we actually have a "long long" type.  Fix incorrect
	usage of sigaction.

2006-07-25:
	* src/stash.c(_pam_krb5_stash_external_read): note when we try to
	pick up external creds, and when we fail to do so.
	* src/storetmp.c(_pam_krb5_storetmp_data): save and set signal handlers
	before we fork().  Go back to allowing setuid/setgid to fail, but only
	after we attempt to drop setuid/setgid status (which gets to fail, too,
	but renders the helper unuseful).
	* src/sly.c,src/sly.h(_pam_krb5_sly_looks_unsafe,
	_pam_krb5_sly_maybe_refresh): move detection of whether or not it
	looks safe into another function.